# seo-py

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  config.py  example_usage.py  interfaces.py  logger.py  pyproject.toml  requirements.txt  seo.py  template_renderer.py  utils.py
.github/workflows/: ci.yml
templates/: base.html  meta_tags.html
tests/: __init__.py  test_config.py  test_html_snapshot.py  test_logger.py  test_template_renderer.py  test_utils.py
tests/snapshots/test_html_snapshot/test_article_html_snapshot/: article_output.html
tests/snapshots/test_html_snapshot/test_blog_html_snapshot/: blog_output.html
